[package]
name = "bevy-rogue"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "launchers/native",
    "launchers/wasm",
]

[[bin]]
name = "native-launcher"
path = "launchers/native/src/main.rs"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.8.1"
bevy_easings = "0.8.1"
bevy_ecs_tilemap = { version = "0.8", features = ["atlas"] }
leafwing-input-manager = "0.6.1"
image = "0.24.4"
winit = "0.26.1"